<resources>

    <string name="app_name">AndroidBase</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_list">目录列表</string>
    <string name="loadWeb">HttpUrlConnection加载网页</string>
    <string name="loadPic">HttpUrlConnection加载网络图片</string>
    <string name="GetAndPostMethod">HttpUrlConnection-Get/Post请求</string>
    <string name="name">姓名:</string>
    <string name="hintName">野猴子</string>
    <string name="age">年龄:</string>
    <string name="hintAge">21</string>
    <string name="get_submit">HttpUrlConnection-GET请求</string>
    <string name="post_submit">HttpUrlConnection-POST请求</string>
    <string name="response">服务端返回:</string>
    <string name="GetAndPostMethodHttpClient">HttpClient-Get/Post请求</string>
    <string name="hc_get">HttpClient-Get请求</string>
    <string name="hc_post">HttpClient-Post请求</string>
    <string name="json">JSON解析</string>
    <string name="xml">XML解析</string>

    <string name="mulitDownLoad">多线程下载图片</string>
    <string name="title_activity_json">JsonActivity</string>
    <string name="getJson">Get-Json</string>
    <string name="showJson">ShowJson</string>
    <string name="clearJson">ClearJson</string>
    <string name="result">结果信息:</string>
    <string name="getXml">GetXml</string>
    <string name="showXml">ShowXml</string>
    <string name="clearXml">ClearXml</string>
    <string name="tip">提示信息</string>
    <string name="downFile">多线程下载文件/图片</string>
    <string name="extra_local_pic">选择本地图片</string>

    <string name="upload">上传(HttpURLConnection/HttpClient)</string>
    <string name="title_activity_life_circle">LifeCircleActivity</string>

    <string name="city_prompt">选择城市</string>
    <string name="title_activity_sp_base_use">SpBaseUseAct</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_menu_alert">文字1</string>
    <string name="tab_menu_profile">文字2</string>
    <string name="tab_menu_pay">文字3</string>
    <string name="tab_menu_setting">文字4</string>
</resources>
