<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="5dp">

    <Button
        android:id="@+id/id_btn_loadWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/loadWeb" />

    <Button
    android:id="@+id/id_btn_loadPic"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:text="@string/loadPic" />

    <Button
        android:id="@+id/id_btn_httpUrlConnectionOper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/GetAndPostMethod" />

    <Button
        android:id="@+id/id_btn_HttpClientOper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/GetAndPostMethodHttpClient" />
</LinearLayout>